Bug 14999 - Listing shares with smbstatus no longer works
Summary: Listing shares with smbstatus no longer works
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.16.0rc4
Hardware: All All
: P5 regression (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-07 09:26 UTC by Jule Anger
Modified: 2022-03-08 15:25 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.16.rcNext. (5.32 KB, patch)
2022-03-07 17:42 UTC, Jeremy Allison
janger: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jule Anger 2022-03-07 09:26:38 UTC
In 4.16 and in the master since commit 99d1f1fa10d (smbd: Remove unused "struct connections_key"), no shares are printed with smbstatus.

The commit removes the lines
-       key.pid = data.pid = global->server_id;
-       key.cnum = data.cnum = global->tcon_global_id;

but it should have replaced them with
+       data.pid = global->server_id;
+       data.cnum = global->tcon_global_id;
Comment 1 Samba QA Contact 2022-03-07 15:28:03 UTC
This bug was referenced in samba master:

b108e039ab13ee9f8f2c629c5b57085a462d14db
9e9e6955ba93691545ea35e39ebdc285cd484406
Comment 2 Jeremy Allison 2022-03-07 16:59:02 UTC
Jule, thanks so much for catching this before official 4.16 release. Sorry for missing this in the initial review.
Comment 3 Jeremy Allison 2022-03-07 17:42:30 UTC
Created attachment 17192 [details]
git-am fix for 4.16.rcNext.

Cherry-picked from master.
Comment 4 Jule Anger 2022-03-08 10:38:26 UTC
Pushed to autobuild-v4-16-test :-)
Comment 5 Samba QA Contact 2022-03-08 11:32:04 UTC
This bug was referenced in samba v4-16-test:

364b16068b1e46ba6aeffe321dd20840c35c2ab7
9df5283f3d99ef6627843c223141040bfe263cf1
Comment 6 Jule Anger 2022-03-08 12:30:15 UTC
Closing out bug report.
Comment 7 Samba QA Contact 2022-03-08 15:25:33 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.0rc5):

364b16068b1e46ba6aeffe321dd20840c35c2ab7
9df5283f3d99ef6627843c223141040bfe263cf1